# GmailCleaner

./: .env.example  .gitignore  .neon  README.md  app.py  classifier.py  config.py  db.py  encryption_utils.py  extension_auth.py  extension_routes.py  gmail_service.py  index.html  package-lock.json  package.json  pyproject.toml  recovery_utils.py  routes.py  start.ps1  tasks.json  vite.config.ts
docs/: PHASE2C_LIVE_VALIDATION.md
docs/Beta/: LIMITED_PRIVATE_BETA_PLAN.md
docs/Compliance/: CHROME_WEB_STORE_CHECKLIST.md  GOOGLE_OAUTH_VERIFICATION_CHECKLIST.md  PRIVACY_POLICY_DRAFT.md  SECURITY_ASSESSMENT_NOTES.md  USER_DATA_DELETION_PLAN.md
docs/Production/: BETA_RELEASE_GATE.md  DEPLOYMENT_RUNBOOK.md  ENVIRONMENT_AND_SECRET_MANAGEMENT.md  HOSTED_BACKEND_OPTIONS.md  LOGGING_REDACTION_POLICY.md  MIGRATION_RUNBOOK.md  NEON_PRODUCTION_DATABASE.md  PRODUCTION_READINESS_CHECKLIST.md  ROLLBACK_RUNBOOK.md  SECRET_ROTATION_RUNBOOK.md
extension/: README.md  manifest.json  options.html  package-lock.json  package.json  popup.html  sidepanel.html  tsconfig.json  vite.config.ts  vitest.config.ts
migrations/: 001_extension_auth.sql  002_scan_progress.sql  003_scan_dry_run.sql  004_operation_logging.sql  005_recovery_execution.sql
src/: App.tsx  index.css  types.ts
tests/: conftest.py  test_classifier.py  test_config.py  test_deletion.py  test_encryption.py  test_extension_api.py  test_extension_auth.py  test_oauth_redirect.py  test_operation_logging.py  test_pacing.py  test_production_config.py  test_recovery_execution.py  test_recovery_preview.py  test_retry_progress.py
(+34 files in other folders)
